# models/user.go
@@ -15,27 +15,31 @@ var (
 	UserList map[string]*User
 )
 
+type LoginInput struct {
+	PhoneNumber string `json:"phone_number"`
+	Password    string `json:"password"`
+}
 type User struct {
 	BaseModel
-	Email    string  `gorm:"size:50;not null;unique" json:"email"`
-	Password *string `gorm:"size:60;not null" json:"password"`
+	PhoneNumber string  `gorm:"size:50;not null;unique" json:"phone_number"`
+	Password    *string `gorm:"size:60;not null" json:"password"`
 }
 
-func GetCustomerFromEmail(email string) (u User, err error) {
+func GetUserFromPhone(phone_number string) (u User, err error) {
 	dbPublic, err := database.GetDatabase("default")
 	if err != nil {
 		return u, err
 	}
-	db := dbPublic.Where("email = ?", email).First(&u)
+	db := dbPublic.Where("phone_number = ?", phone_number).First(&u)
 	return u, db.Error
 }
 func CheckLogin(input LoginInput) (u User, err error, statusCode int) {
 	statusCode = http.StatusOK
-	if input.Password == "" || input.Email == "" {
+	if input.Password == "" || input.PhoneNumber == "" {
 		return u, errors.New("Empty input"), http.StatusForbidden
 	}
 	// GET USER FROM EMAIL
-	u, err = GetCustomerFromEmail(input.Email)
+	u, err = GetUserFromPhone(input.PhoneNumber)
 	if err != nil {
 		return User{}, err, http.StatusForbidden
 	}
@@ -56,7 +60,7 @@ func CheckLogin(input LoginInput) (u User, err error, statusCode int) {
 		return User{}, err, http.StatusInternalServerError
 	}
 }
-func GetCustomerFromID(id uint64) (u User, err error) {
+func GetUserFromID(id uint64) (u User, err error) {
 	log.Println(1)
 	dbPublic, err := database.GetDatabase("default")
 	if err != nil {
@@ -65,16 +69,28 @@ func GetCustomerFromID(id uint64) (u User, err error) {
 	db := dbPublic.Where("id = ?", id).First(&u)
 	return u, db.Error
 }
-func GetCustomerSocialFromID(IDSocial uint64) (customer User, err error) {
+func GetUserSocialFromID(IDSocial uint64) (user User, err error) {
 	dbPublic, err := database.GetDatabase("default")
 	if err != nil {
-		return customer, err
+		return user, err
 	}
-	db := dbPublic.Where("id_social = ?", IDSocial).First(&customer)
-	return customer, db.Error
+	db := dbPublic.Where("id_social = ?", IDSocial).First(&user)
+	return user, db.Error
 }
-
-func GetCustomerSocialFromEmail(email string) (cus User, err error) {
+func CheckExistsUserFromPhone(phone string) (res User, err error, status int) {
+	dbPublic, err := database.GetDatabase("default")
+	if err != nil {
+		return res, err, http.StatusInternalServerError
+	}
+	tx := dbPublic.Model(&User{}).Where("phone_number = ?", phone).First(&res)
+	if tx.RowsAffected == 0 {
+		log.Println(res, err)
+		return res, nil, http.StatusOK
+	} else {
+		return res, fmt.Errorf("So dien thoai da dang ky"), http.StatusForbidden
+	}
+}
+func GetUserSocialFromEmail(email string) (cus User, err error) {
 	dbPublic, err := database.GetDatabase("default")
 	if err != nil {
 		return cus, err
@@ -83,12 +99,12 @@ func GetCustomerSocialFromEmail(email string) (cus User, err error) {
 	return cus, db.Error
 }
 
-func CreateCustomerSocial(customer User) (User, error, int) {
+func CreateUserSocial(user User) (User, error, int) {
 	dbPublic, err := database.GetDatabase("default")
-	fmt.Println("customer ", customer)
+	fmt.Println("user ", user)
 	if err != nil {
 		return User{}, err, http.StatusInternalServerError
 	}
-	db := dbPublic.Create(&customer)
-	return customer, db.Error, http.StatusOK
+	db := dbPublic.Create(&user)
+	return user, db.Error, http.StatusOK
 }
